--- a/package.json
+++ b/package.json
@@ -1,15 +1,3 @@
-{
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.1"
-  }
+"scripts": {
+  "test": "jest"
 }
