--- a/package.json
+++ b/package.json
@@ -1,3 +1,16 @@
-"scripts": {
-  "test": "jest"
+{
+  "name": "my-node-app",
+  "version": "1.0.0",
+  "description": "A simple Node.js app with CI via GitHub Actions",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0"
+  }
 }
