--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Run tests
       run: npm test # Make sure to have tests in your app
 
-    - name: Build
-      run: npm run build # Optional step if you have a build script
+#    - name: Build
+#      run: npm run build # Optional step if you have a build script
