--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "supertest": "^6.1.6",
+    "eslint": "^7.32.0"
   }
 }
