--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Node.js app with CI via GitHub Actions",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "jest"
   },
   "dependencies": {
