--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple Node.js app with CI via GitHub Actions",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
